Namespaces/network_Policy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: dev-team
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dev-team
  template:
    metadata:
      labels:
        app: dev-team
        name: dev-team
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80

---
spiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-deploy
  ports:
    - protocol: TCP
      port: 80
      targetType: 80
