Namespaces/network_Policy/networkPolicy.yaml
#Make sure to enable calico network policy before applying these changes
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denay-cross-namespace-community
spec:
  podSelector:
    matchLabels:
      name: dev-team
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: default
